[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
icrate = { version = "0.0.3", features = [
    "Foundation",
    "Foundation_NSArray",
    "Foundation_NSNumber",
    "Foundation_NSMutableDictionary",
] }
objc2 = { version = "0.4.0", features = ["malloc"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.43", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_DirectShow",
    "Win32_Media",
    "Win32",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "implement",
] }

[target.'cfg(target_os="linux")'.dependencies]
v4l = "0.14.0"

[dev-dependencies]
softbuffer = "0.3.0"
winit = "0.27.5"

[dependencies]
ffimage = "0.9.0"
ffimage_yuv = "0.9.0"
kamera = "0.0.2"
softbuffer = "0.3.0"
winit = "0.27.5"
